--- a/Themes/default/css/sections.css
+++ b/Themes/default/css/sections.css
@@ -872,7 +872,7 @@ tr.titlebg td {
 
 /* Styles for sidebar menus.
 ------------------------------------------------------- */
-.left_menu
+.left_menu {
 	&, ul, li {
 		padding: 0;
 		margin: 0;
